--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 						<li class="active"><a href="index.html">Home</a></li>
 
 
-						<li><a href="work.html">Work</a></li>
+
 						<li><a href="http://www.daisystorm.bigcartel.com">Shop</a></li>
-						<li><a href="contact.html">Contact</a></li>
+
 					</ul>
 				</div>
 			</div>
@@ -199,7 +199,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading  animate-box">
-					
+
 					<h2>Projectos Recentes</h2>
 					<p> Alguns dos últimos projectos que realizei. </p>
 
@@ -208,8 +208,8 @@
 
 			<div class="row">
 				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-					<a href="https://www.youtube.com/watch?v=HClBclKezd8"><img src="images/work-1.jpg" alt="" class="img-responsive">
-						<h3>Youtube</h3>
+					<a href="https://www.youtube.com/watch?v=HClBclKezd8"><img src="images/work-1.jpg" alt="Youtube channel" class="img-responsive">
+						<h3>Youtube channel</h3>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
@@ -218,8 +218,26 @@
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="images/work-3.jpg" alt="" class="img-responsive">
-						<h3>Multimedia</h3>
+					<a href="https://www.youtube.com/watch?v=PHNEiNoN3M8"><img src="images/work-3.jpg" alt="Stop motion parte 1" class="img-responsive">
+						<h3>Stop motion: parte 1</h3>
+					</a>
+				</div>
+
+
+
+				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+					<a href="https://www.youtube.com/watch?v=YtSSvy72XPk"><img src="images/work-4.jpg" alt="Dubai trip" class="img-responsive">
+						<h3>Dubai trip</h3>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+					<a href="https://www.youtube.com/watch?v=fvPDr_aXmQI"><img src="images/work-5.jpg" alt="Sonoplastia" class="img-responsive">
+						<h3>Sonoplastia</h3>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+					<a href="https://www.youtube.com/watch?v=zfWDcCADKqg"><img src="images/work-6.jpg" alt="Stop-motion parte 2" class="img-responsive">
+						<h3>Stop motion: parte 2</h3>
 					</a>
 				</div>
 
@@ -283,55 +301,6 @@
 			</div>
 	</div>
 
-	<div id="fh5co-testimonial" class="fh5co-bg-section">
-		<div class="container">
-			<div class="row animate-box row-pb-md">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<span>You deserved happiness</span>
-					<h2>Clientes Satisfeitos</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 animate-box">
-					<div class="testimonial">
-						<blockquote>
-							<p>&ldquo;Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-							<p class="author"> <img src="images/person1.jpg" alt="Wrong Weather"> <cite>&mdash; Wrong Weather</cite></p>
-						</blockquote>
-					</div>
-
-					<div class="testimonial">
-						<blockquote>
-							<p>&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-							<p class="author"><img src="images/person2.jpg" alt="Carlsberg"> <cite>&mdash; Carlsberg</cite></p>
-						</blockquote>
-					</div>
-				</div>
-
-				<div class="col-md-6 animate-box">
-					<div class="testimonial">
-						<blockquote>
-							<p>&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-							<p class="author"><img src="images/person3.jpg" alt="Sumol"> <cite>&mdash; Sumol</cite></p>
-						</blockquote>
-					</div>
-
-					<div class="testimonial">
-						<blockquote>
-							<p>&ldquo;Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-							<p class="author"><img src="images/person4.jpg" alt="Universidade Lusófona"> <cite>&mdash; Universidade Lusófona</cite></p>
-						</blockquote>
-					</div>
-
-				</div>
-
-
-
-			</div>
-		</div>
-	</div>
-
-
 
 	<div id="fh5co-started">
 		<div class="container">
@@ -349,41 +318,7 @@
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
-			<div class="row row-pb-md">
-				<div class="col-md-4 fh5co-widget ">
-					<h3>Redes e Infos</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
-				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
 
-
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-
-
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
-					<ul class="fh5co-footer-links">
-
-						<li><a href="#">Advertise</a></li>
-					  <li><a href="#">Meetups</a></li>
-						<li><a href="#">Terms</a></li>
-					</ul>
-				</div>
-			</div>
 
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
