--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 
 							<div class="desc">
 									<h3>Quem sou?</h3>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex sunt ea praesentium expedita numquam?</p>
-								<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt perferendis quae amet deserunt eum labore quidem minima.</p>
+								<p>x </p> 
 							</div>
 						</div>
 						<div class="col-md-6 col-md-pull-6">
@@ -145,7 +144,7 @@
 							<i class="icon-youtube"></i>
 						</span>
 						<h3>Youtube Partner</h3>
-						<p>Sou Youtube Partner desde 2013, sendo ou Youtube Partner desde 2013, sendo ou Youtube Partner desde 2013, sendo ou Youtube Partner desde 2013, sendo ou Youtube Partner desde 2013, sendo ou Youtube Partner desde 2013, sendo    </p>
+						<p>Sou Youtube Partner desde 2013. Tendo assim um contracto com o Youtube, dando por exemplo acesso a áreas exclusivas para Youtube Partners.</em>  </p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 ">
@@ -175,7 +174,7 @@
 							<i class="icon-laptop"></i>
 						</span>
 						<h3>Web Designer</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p>Não há nada melhor do que desenhar um website completo de raiz.</p>
 
 					</div>
 				</div>
