--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 							<div class="desc">
 									<h3>Quem sou?</h3>
-								<p>x </p> 
+								<p>x </p>
 							</div>
 						</div>
 						<div class="col-md-6 col-md-pull-6">
@@ -309,7 +309,7 @@
 					<h2>Começa o teu projecto hoje!</h2>
 					<p>Carrega no botão em baixo se tiveres total a certeza que queres trabalhar comigo! </p> Qualqer email spam será ignorado. <br> <br>
 
-							<p><button type="submit" class="btn btn-default"><a href="mailto:someone@example.com ;" style="color:#ffffff;">Get In Touch</a></button></p>
+							<p><button type="submit" class="btn btn-default"><a href="mailto:lucasviegasw@gmail.com ;" style="color:#ffffff;">Get In Touch</a></button></p>
 				</div>
 			</div>
 		</div>
