--- a/index.html
+++ b/index.html
@@ -112,7 +112,15 @@
 
 							<div class="desc">
 									<h3>Quem sou?</h3>
-								<p>x </p>
+								<p>Chamo-me Lucas Viegas e desde 2013 que sou Youtube Partner, tenho mais de 8 milhões de visualizações no meu canal principal.  </p>
+								Criei uma marca de roupa que neste momento estamos cada vez melhor sendo que vendemos para todo o Mundo.
+
+								Sou presistente e não consigo estar quieto, isto é, não consigo estar num sofá o dia todo sem fazer nada, para mim, acordo e tenho de ter um objectivo nesse dia e tenho de o cumprir ou até superar. O tempo é a coisa mais valiosa de todo o mundo, tudo se pode comprar menos tempo, dai termos de o aproveitar bem.
+
+
+								Also tenho 21 anos e sou de Lisboa. Um facto aleatório, consigo resolver o cubo mágico em menos de 30 segundos (28.01 segundos para ser preciso).
+
+
 							</div>
 						</div>
 						<div class="col-md-6 col-md-pull-6">
