--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
 								Sou presistente e não consigo estar quieto, isto é, não consigo estar num sofá o dia todo sem fazer nada, para mim, acordo e tenho de ter um objectivo nesse dia e tenho de o cumprir ou até superar. O tempo é a coisa mais valiosa de todo o mundo, tudo se pode comprar menos tempo, dai termos de o aproveitar bem.
 
-
-								Also tenho 21 anos e sou de Lisboa. Um facto aleatório, consigo resolver o cubo mágico em menos de 30 segundos (28.01 segundos para ser preciso).
+<p>
+								Also tenho 21 anos e sou de Lisboa. Um facto aleatório, consigo resolver o cubo mágico em menos de 30 segundos (28.01 segundos para ser preciso).</p>
 
 
 							</div>
@@ -330,7 +330,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016. All Rights Reserved.</small>
+						<small class="block">&copy; 2017. All Rights Reserved.</small>
 						<small class="block">Designed by Lucas Viegas
 					</p>
 					<p>
